Refactoring -> created Util class